# nf-schema-formatter

./: .gitignore  README.md  params.json  pyproject.toml
example/: nextflow.config  params.json
json-processor/: package-lock.json  package.json
json-processor/src/: App.js  DragItem.js  DropZone.js  Footer.js  Param.js  Typography.js
nextflow/: .nextflow.log.1  .nextflow.log.2  .nextflow.log.3  .nextflow.log.4  .nextflow.log.5  .nextflow.log.6  .nextflow.log.7  .nextflow.log.8  .nextflow.log.9  nextflow.config  params.json  workflow.nf
nextflow/conf/: base.config  modules.config  samplesheet_config.json
nextflow/conf/test/: test.config
nextflow/data/: samplesheet.csv
nextflow/envs/: singularity.yaml
nextflow/modules/: base_default.nf  base_label.nf  sample_sheet.nf
nextflow/subworkflows/: sample_sheet_validation.nf
nf_utils/: main.py
nf_utils/schema/: formatter.py
